--- a/style.css
+++ b/style.css
@@ -2,3 +2,12 @@ body {
 
 }
 
+.main-container {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 15vh 85vh;
+}
+
+.sidebar {
+    grid-row: ;
+}
