--- a/style.css
+++ b/style.css
@@ -6,8 +6,18 @@ body {
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 15vh 85vh;
+
 }
 
 .sidebar {
     grid-row: ;
+}
+
+#dash {
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr) 250px;
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 1em 1em;
+    border: black 1px solid;
 }
